--- a/main.html
+++ b/main.html
@@ -7,6 +7,7 @@
 </head>
 
 <body>
+	<!-- the entire body must be written by student -->
 	<div class="container">
 		<h2>My Playlist</h2>
 		<div class="player_one">
@@ -32,6 +33,9 @@
 			
 		</div>
 	</div>
+    <script type="text/javascript" src="./script.js">
+</script>
+
 </body>
 
 </html>
