--- a/main.html
+++ b/main.html
@@ -7,34 +7,46 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
-	<div class="container">
-		<h2>My Playlist</h2>
-		<div class="player_one">
-			<p><a href="https://www.youtube.com/watch?v=kd-6aw99DpA " target="_blank">song 1</a></p>
-			<p><a href=" https://www.youtube.com/watch?v=9iIX4PBplAY " target="_blank">song 2</a></p>
-			<p><a href="https://www.youtube.com/watch?v=IjBAgWKW12Y " target="_blank">song 3</a></p>
-			<p><a href="https://www.youtube.com/watch?v=puKD3nkB1h4 " target="_blank">song 4</a></p>
-			<p><a href="https://www.youtube.com/watch?v=6MgsHSAcI9k" target="_blank">song 5</a></p>
-		</div>
+	<main style="padding:top;" class="Arpit">
 
-		<h4>Now Playing...</h4>
-		<div class="player_two">
-			<div>
-				<video controls><source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4"</video>
-			</div>
-			
-			
-			<h4>MP3 songs</h4>
-			<p>Man Meri Jaan</p>
-			<div class="audiocontrol">
-				<audio controls><source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mpeg"></audio>
-			</div>
-			
+	<h1>My Playlist</h1>
+
+	<div class="player_one">
+
+		<ul style="list-style: none;"">
+	
+			<li><a href="https://www.youtube.com/watch?v=kd-6aw99DpA" target="_blank">song1</a></li>
+			<li><a href="https://www.youtube.com/watch?v=9iIX4PBplAY" target="_blank">song2</a></li>
+			<li><a href=" https://www.youtube.com/watch?v=IjBAgWKW12Y" target="_blank">song3</a></li>
+			<li><a href="https://www.youtube.com/watch?v=puKD3nkB1h4" target="_blank">song4</a></li>
+			<li><a href="https://www.youtube.com/watch?v=6MgsHSAcI9k" target="_blank">song5</a></li>
+		</ul>
+
 		</div>
+	<br>
+
+	<h2>Now Playing...</h2>
+
+	<div class="player_two">
+
+	<video src="https://www.w3schools.com/tags/movie.mp4" controls></video>
+
+		
+
+	<h2>MP3 songs</h2>
+
+	<p style="text-align: left;">Maan Meri Jaan</p>
+
+	<audio src="https://www.pagalworld.com.se/files/download/id/64630" controls></audio>
+
 	</div>
+</main>
+	
+	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
+
+
 
 </body>
 
