--- a/main.html
+++ b/main.html
@@ -6,35 +6,33 @@
 	<link rel="stylesheet" href="styles.css">
 </head>
 
-<body>
+<body style="background-color:#cccccc;">
 	<!-- the entire body must be written by student -->
-	<div class="container">
-		<h2>My Playlist</h2>
-		<div class="player_one">
-			<p><a href="https://www.youtube.com/watch?v=kd-6aw99DpA " target="_blank">song 1</a></p>
-			<p><a href=" https://www.youtube.com/watch?v=9iIX4PBplAY " target="_blank">song 2</a></p>
-			<p><a href="https://www.youtube.com/watch?v=IjBAgWKW12Y " target="_blank">song 3</a></p>
-			<p><a href="https://www.youtube.com/watch?v=puKD3nkB1h4 " target="_blank">song 4</a></p>
-			<p><a href="https://www.youtube.com/watch?v=6MgsHSAcI9k" target="_blank">song 5</a></p>
-		</div>
-
-		<h4>Now Playing...</h4>
-		<div class="player_two">
-			<div>
-				<video controls><source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4"</video>
-			</div>
-			
-			
-			<h4>MP3 songs</h4>
-			<p>Man Meri Jaan</p>
-			<div class="audiocontrol">
-				<audio controls><source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mpeg"></audio>
-			</div>
-			
-		</div>
-	</div>
     <script type="text/javascript" src="./script.js">
 </script>
+
+	<h1>My Playlist</h1>
+    <div class="player_one">
+     
+        <li><a href="https://www.youtube.com/watch?v=kd-6aw99DpA" target="_blank">Song 1</a></li>
+        <li><a href="https://www.youtube.com/watch?v=9iIX4PBplAY" target="_blank">Song 2</a></li>
+        <li><a href="https://www.youtube.com/watch?v=IjBAgWKW12Y" target="_blank">Song 3</a></li>
+        <li><a href="https://www.youtube.com/watch?v=puKD3nkB1h4" target="_blank">Song 4</a></li>
+        <li><a href="https://www.youtube.com/watch?v=6MgsHSAcI9k" target="_blank">Song 5</a></li>
+      
+    </div>
+	<h2>Now Playing...</h2>
+    <div class="player_two">
+      <video width="320" height="240" controls>
+        <source src="https://www.w3schools.com/tags/movie.mp4" type="video/mp4">
+      </video>
+    </div>
+    <div class="player_three">
+      <h2>MP3 songs</h2>
+      <audio controls>
+        <source src="https://www.pagalworld.com.se/files/download/id/64630" type="audio/mpeg">
+      </audio>
+    </div>
 
 </body>
 
